--- a/Makefile.in
+++ b/Makefile.in
@@ -85,7 +85,7 @@ libnss_mysql_la_SOURCES = nss_config.c nss_mysql.c nss_structures.c \
 libnss_mysql_la_LDFLAGS = -version-info 2:0:0
 noinst_HEADERS = nss_mysql.h
 CPPFLAGS = @CPPFLAGS@ -Wall -D_REENTRANT
-EXTRA_DIST = INTERNALS
+EXTRA_DIST = INTERNALS TODO sample 
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = config.h
