--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
+AC_REVISION($Revision$)dnl
 AC_INIT(nss_mysql.c)
 AM_INIT_AUTOMAKE(libnss_mysql, 0.1)
 AM_CONFIG_HEADER(config.h)
