Better name for what is now HAVE___FUNC__

--- a/config.h.in
+++ b/config.h.in
@@ -28,7 +28,7 @@
 #undef ROOTCFG
 
 /* */
-#undef HAVE_UUFUNCUU
+#undef HAVE___FUNC__
 
 /* Define if you have the mysql_connect function.  */
 #undef HAVE_MYSQL_CONNECT
