Added new facility & priority options

--- a/sample/nss_mysql.cfg
+++ b/sample/nss_mysql.cfg
@@ -1,5 +1,7 @@
 [global]
 retry       5
+facility    auth
+priority    alert
 
 [defaults]
 database    auth
@@ -19,5 +21,5 @@ getgrent    SELECT name,password,gid,members FROM groups
 [server]
 host        localhost
 [server]
-host        192.168.1.95
+host        192.168.1.2
 
