--- a/config.h.in
+++ b/config.h.in
@@ -18,9 +18,6 @@
 /* define to int if your system doesn't define it for you */
 #undef intptr_t
 
-/* Define this with a file to send debugging information to */
-#undef DEBUG_FILE
-
 /* */
 #undef MAINCFG
 
@@ -29,6 +26,9 @@
 
 /* */
 #undef HAVE___FUNC__
+
+/* */
+#undef HAVE_LOG_AUTHPRIV
 
 /* Define if you have the mysql_connect function.  */
 #undef HAVE_MYSQL_CONNECT
