--- a/configure.in
+++ b/configure.in
@@ -18,7 +18,7 @@ dnl
 dnl $Id$ */
 
 AC_REVISION($Revision$)dnl
-AC_INIT(nss_mysql.c)
+AC_INIT(nss_main.c)
 AM_INIT_AUTOMAKE(libnss_mysql, 0.2d)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
