Changes in code require changes in config format. Woops, let's select the spnam fields for real!

--- a/sample/nss_mysql.cfg
+++ b/sample/nss_mysql.cfg
@@ -4,23 +4,27 @@ facility    auth
 priority    alert
 debug_flags 0
 
-[defaults]
-database    auth
-username    nss-user
-password    userpass
-port        3306
-socket      /var/lib/mysql/mysql.sock
+[queries]
 getpwnam    SELECT username,'x',uid,gid,gecos,homedir,shell FROM users WHERE username='%s' LIMIT 1
 getpwuid    SELECT username,'x',uid,gid,gecos,homedir,shell FROM users WHERE uid='%d' LIMIT 1
-getspnam    SELECT username,password,1,0,99999,0,0,-1,0 FROM users WHERE username='%s' LIMIT 1
+getspnam    SELECT username,password,lstchg,min,max,warn,inact,expire,flag FROM users WHERE username='%s' LIMIT 1
 getpwent    SELECT username,'x',uid,gid,gecos,homedir,shell FROM users
-getspent    SELECT username,password,1,0,99999,0,0,-1,0 FROM users
+getspent    SELECT username,password,lstchg,min,max,warn,inact,expire,flag FROM users
 getgrnam    SELECT name,password,gid,members FROM groups WHERE name='%s' LIMIT 1
 getgrgid    SELECT name,password,gid,members FROM groups WHERE gid='%d' LIMIT 1
 getgrent    SELECT name,password,gid,members FROM groups
 
 [server]
 host        localhost
+database    auth
+username    nss-user
+password    userpass
+socket      /var/lib/mysql/mysql.sock
+
 [server]
 host        192.168.1.2
+database    auth
+username    nss-user
+password    userpass
+port        3306
 
