acconfig.h was updated

--- a/config.h.in
+++ b/config.h.in
@@ -18,16 +18,16 @@
 /* define to int if your system doesn't define it for you */
 #undef intptr_t
 
-/* */
+/* Main config file */
 #undef MAINCFG
 
-/* */
+/* Root config file */
 #undef ROOTCFG
 
-/* */
+/* Recent gcc's have built-in __FUNC__ */
 #undef HAVE___FUNC__
 
-/* */
+/* Some systems have a LOG_AUTHPRIV syslog facility */
 #undef HAVE_LOG_AUTHPRIV
 
 /* Define if you have the mysql_connect function.  */
