--- a/Makefile.am
+++ b/Makefile.am
@@ -20,9 +20,10 @@
 
 lib_LTLIBRARIES = libnss_mysql.la
 libnss_mysql_la_SOURCES = nss_config.c nss_main.c nss_structures.c \
-                          nss_support.c memory.c mysql.c
+                          nss_support.c memory.c mysql.c mysql-pwd.c \
+                          lookup.c mysql-spwd.c mysql-grp.c
 libnss_mysql_la_LDFLAGS = -version-info 2:0:0
-noinst_HEADERS = nss_mysql.h
+noinst_HEADERS = nss_mysql.h lookup.h
 CPPFLAGS = @CPPFLAGS@ -Wall -D_REENTRANT
 EXTRA_DIST = INTERNALS TODO FAQ sample/*.cfg sample/*.sql
 install-data-local:
