--- a/Makefile.in
+++ b/Makefile.in
@@ -79,10 +79,11 @@ VERSION = @VERSION@
 
 lib_LTLIBRARIES = libnss_mysql.la
 libnss_mysql_la_SOURCES = nss_config.c nss_main.c nss_structures.c \
-                          nss_support.c memory.c mysql.c
+                          nss_support.c memory.c mysql.c mysql-pwd.c \
+                          lookup.c mysql-spwd.c mysql-grp.c
 
 libnss_mysql_la_LDFLAGS = -version-info 2:0:0
-noinst_HEADERS = nss_mysql.h
+noinst_HEADERS = nss_mysql.h lookup.h
 CPPFLAGS = @CPPFLAGS@ -Wall -D_REENTRANT
 EXTRA_DIST = INTERNALS TODO FAQ sample/*.cfg sample/*.sql
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -97,7 +98,8 @@ LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 libnss_mysql_la_LIBADD = 
 libnss_mysql_la_OBJECTS =  nss_config.lo nss_main.lo nss_structures.lo \
-nss_support.lo memory.lo mysql.lo
+nss_support.lo memory.lo mysql.lo mysql-pwd.lo lookup.lo mysql-spwd.lo \
+mysql-grp.lo
 CFLAGS = @CFLAGS@
 COMPILE = $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 LTCOMPILE = $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
@@ -115,7 +117,8 @@ DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
 TAR = gtar
 GZIP_ENV = --best
-DEP_FILES =  .deps/memory.P .deps/mysql.P .deps/nss_config.P \
+DEP_FILES =  .deps/lookup.P .deps/memory.P .deps/mysql-grp.P \
+.deps/mysql-pwd.P .deps/mysql-spwd.P .deps/mysql.P .deps/nss_config.P \
 .deps/nss_main.P .deps/nss_structures.P .deps/nss_support.P
 SOURCES = $(libnss_mysql_la_SOURCES)
 OBJECTS = $(libnss_mysql_la_OBJECTS)
