Back to %d (well, %u) for numerical formats.

--- a/sample/nss_mysql.cfg
+++ b/sample/nss_mysql.cfg
@@ -6,12 +6,12 @@ debug_flags 0
 
 [queries]
 getpwnam    SELECT username,'x',uid,gid,gecos,homedir,shell FROM users WHERE username='%s' LIMIT 1
-getpwuid    SELECT username,'x',uid,gid,gecos,homedir,shell FROM users WHERE uid='%s' LIMIT 1
+getpwuid    SELECT username,'x',uid,gid,gecos,homedir,shell FROM users WHERE uid='%u' LIMIT 1
 getspnam    SELECT username,password,lstchg,min,max,warn,inact,expire,flag FROM users WHERE username='%s' LIMIT 1
 getpwent    SELECT username,'x',uid,gid,gecos,homedir,shell FROM users
 getspent    SELECT username,password,lstchg,min,max,warn,inact,expire,flag FROM users
 getgrnam    SELECT name,password,gid,members FROM groups WHERE name='%s' LIMIT 1
-getgrgid    SELECT name,password,gid,members FROM groups WHERE gid='%s' LIMIT 1
+getgrgid    SELECT name,password,gid,members FROM groups WHERE gid='%u' LIMIT 1
 getgrent    SELECT name,password,gid,members FROM groups
 
 [server]
