--- a/Makefile.am
+++ b/Makefile.am
@@ -19,20 +19,32 @@
 # From Makefile.am $Revision$
 
 lib_LTLIBRARIES = libnss_mysql.la
+
 libnss_mysql_la_SOURCES = nss_config.c nss_main.c nss_structures.c \
-                          nss_support.c memory.c mysql.c mysql-pwd.c \
-                          lookup.c mysql-spwd.c mysql-grp.c
-libnss_mysql_la_LDFLAGS = -version-info 2:0:0
+                          nss_support.c memory.c mysql.c lookup.c \
+                          mysql-pwd.c mysql-spwd.c mysql-grp.c
+libnss_mysql_la_LDFLAGS = -version-info @LIBVER@:0:0
+
 noinst_HEADERS = nss_mysql.h lookup.h
 CPPFLAGS = @CPPFLAGS@ -Wall -D_REENTRANT
 EXTRA_DIST = INTERNALS TODO FAQ sample/*.cfg sample/*.sql
+
+install-exec-local:
+	-rm -f $(DESTDIR)$(libdir)/libnss_mysql.la
+if SOLARIS
+	-rm -f $(DESTDIR)$(libdir)/libnss_mysql.so
+	-rm -f $(DESTDIR)$(libdir)/libnss_mysql.so.@LIBVER@
+	-mv -f $(DESTDIR)$(libdir)/libnss_mysql.so.@LIBVER@.0.0 \
+           $(DESTDIR)$(libdir)/nss_mysql.so.1
+endif
+
 install-data-local:
-	@if test ! -e ${DESTDIR}${sysconfdir}/nss_mysql.cfg; then \
+	@if test ! -f ${DESTDIR}${sysconfdir}/nss_mysql.cfg; then \
 		${srcdir}/mkinstalldirs ${DESTDIR}${sysconfdir}; \
 		${INSTALL_DATA} ${srcdir}/sample/nss_mysql.cfg \
 			${DESTDIR}${sysconfdir}/nss_mysql.cfg; \
 	fi
-	@if test ! -e ${DESTDIR}${sysconfdir}/nss_mysql_root.cfg; then \
+	@if test ! -f ${DESTDIR}${sysconfdir}/nss_mysql_root.cfg; then \
 		${srcdir}/mkinstalldirs ${DESTDIR}${sysconfdir}; \
 		${INSTALL_DATA} -m 600 ${srcdir}/sample/nss_mysql_root.cfg \
 			${DESTDIR}${sysconfdir}/nss_mysql_root.cfg; \
