--- a/configure.in
+++ b/configure.in
@@ -19,11 +19,15 @@ dnl $Id$ */
 
 AC_REVISION($Revision$)dnl
 AC_INIT(nss_main.c)
+AC_CANONICAL_SYSTEM
+AC_PREFIX_DEFAULT()
 AM_INIT_AUTOMAKE(libnss_mysql, 0.3dev)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
 AC_PROG_CC
+
+AC_DISABLE_STATIC
 AC_PROG_LIBTOOL
 
 AC_ARG_WITH(mysql-inc, [  --with-mysql-inc=DIR    Location of your MySQL include files],
@@ -42,6 +46,26 @@ case "${withval}" in
    *) MYSQL_LIB_DIR=${withval} ;;
 esac
 ])
+
+case "$target_os" in
+linux*)
+    dnl Shell cmd below adapted from padl.com's nss_ldap
+    LIBVER=`ls /lib/libnss_files.so.? | tail -1 | sed -e 's#/lib/libnss_files\.so\.\(.*\)#\1#'`
+    TOS=linux
+    test "$prefix" = "NONE" && prefix=
+    ;;
+solaris*)
+    LIBVER=1
+    TOS=solaris
+    test "$prefix" = "NONE" && prefix= && libdir=/usr/lib
+    ;;
+*) os=unknown ;;
+esac
+
+AM_CONDITIONAL(LINUX, test "$TOS" = "linux")
+AM_CONDITIONAL(SOLARIS, test "$TOS" = "solaris")
+
+AC_SUBST(LIBVER)
 
 FIND_MYSQL()
 
@@ -69,9 +93,6 @@ esac
 AC_CHECK_FUNCS(strcspn strspn strtok, ,
                [AC_MSG_ERROR(The above function is required)])
 AC_CHECK_FUNCS(mysql_connect mysql_init)
-
-AC_ENABLE_SHARED(yes)
-AC_ENABLE_STATIC(no)
 
 AC_TRY_COMPILE([
 #include <stdio.h>],
@@ -103,7 +124,6 @@ case "$have_logftp" in
    no) ;;
 esac
 
-test "$prefix" = "NONE" && prefix=/usr/local
 EXPANDED_SYSCONFDIR=`eval echo $sysconfdir`
 AC_DEFINE_UNQUOTED(MAINCFG,"$EXPANDED_SYSCONFDIR/nss_mysql.cfg")
 AC_DEFINE_UNQUOTED(ROOTCFG,"$EXPANDED_SYSCONFDIR/nss_mysql_root.cfg")
