--- a/configure.in
+++ b/configure.in
@@ -60,7 +60,7 @@ solaris*)
     test "$prefix" = "NONE" && prefix= && libdir=/usr/lib
     dnl This hack below is needed until I figure out why a memory leak
     dnl occurs when libmysqlclient is constantly dlopen'ed and dlclose'd
-    LD_OPTIONS=-z nodelete
+    LD_OPTIONS="-z nodelete"
     ;;
 *) os=unknown ;;
 esac
