--- a/config.h.in
+++ b/config.h.in
@@ -15,8 +15,8 @@
 /* Define to `int' if <sys/types.h> doesn't define.  */
 #undef uid_t
 
-/* define to int if your system doesn't define it for you */
-#undef intptr_t
+/* define to unsigned int if your system doesn't define it for you */
+#undef uintptr_t
 
 /* Main config file */
 #undef MAINCFG
