--- a/configure.in
+++ b/configure.in
@@ -75,6 +75,8 @@ FIND_MYSQL()
 AC_CHECK_LIB(mysqlclient, mysql_connect, ,
              [AC_MSG_ERROR(Unable find a functioning MySQL library)])
 
+AC_CHECK_LIB(socket, getsockname)
+
 AC_CHECK_HEADER(mysql.h, , [AC_MSG_ERROR(Unable to find mysql.h)])
 
 AC_HEADER_STDC
