--- a/configure.in
+++ b/configure.in
@@ -80,20 +80,11 @@ AC_CHECK_LIB(socket, getsockname)
 AC_CHECK_HEADER(mysql.h, , [AC_MSG_ERROR(Unable to find mysql.h)])
 
 AC_HEADER_STDC
-AC_CHECK_HEADERS(syslog.h unistd.h nss.h nss_common.h strings.h)
+AC_CHECK_HEADERS(syslog.h stdint.h nss.h nss_common.h strings.h)
 
 AC_C_CONST
 AC_TYPE_UID_T
 AC_TYPE_SIZE_T
-AC_TRY_COMPILE([
-#include <unistd.h>],
-[uintptr_t foo;],
-[have_uintptr_t=yes],
-[have_uintptr_t=no])
-case "$have_uintptr_t" in
-  yes) ;;
-   no) AC_DEFINE_UNQUOTED(uintptr_t, unsigned int) ;;
-esac
 
 AC_CHECK_FUNCS(strcspn strspn strtok, ,
                [AC_MSG_ERROR(The above function is required)])
