[server] changed to [primary]/[secondary]

--- a/sample/nss_mysql.cfg
+++ b/sample/nss_mysql.cfg
@@ -14,14 +14,14 @@ getgrnam    SELECT name,password,gid,members FROM groups WHERE name='%s' LIMIT 1
 getgrgid    SELECT name,password,gid,members FROM groups WHERE gid='%u' LIMIT 1
 getgrent    SELECT name,password,gid,members FROM groups
 
-[server]
+[primary]
 host        localhost
 database    auth
 username    nss-user
 password    userpass
 socket      /var/lib/mysql/mysql.sock
 
-[server]
+[secondary]
 host        192.168.1.2
 database    auth
 username    nss-user
