--- a/sample/nss_mysql_root.cfg
+++ b/sample/nss_mysql_root.cfg
@@ -1,7 +1,7 @@
-[server]
+[primary]
 username    nss-root
 password    rootpass
 
-[server]
+[secondary]
 username    nss-root
 password    rootpass
