--- a/configure.in
+++ b/configure.in
@@ -52,17 +52,13 @@ esac
 
 case "$target_os" in
 linux*)
-    dnl Shell cmd below adapted from padl.com's nss_ldap
-    LIBVER=`ls /lib/libnss_files.so.? | tail -1 | sed -e 's#/lib/libnss_files\.so\.\(.*\)#\1#'`
+    LIBVER=2
     TOS=linux
     test "$prefix" = "NONE" && prefix=
     ;;
 solaris*)
     LIBVER=1
     TOS=solaris
-    if test "$ac_cv_c_compiler_gnu" = "yes"; then
-        CPPFLAGS="-m32 $CPPFLAGS"
-    fi
     test "$prefix" = "NONE" && prefix= && libdir=/usr/lib
     ;;
 *) os=unknown ;;
