--- a/Makefile.in
+++ b/Makefile.in
@@ -88,7 +88,7 @@ libnss_mysql_la_LDFLAGS = -module -version-info @LIBVER@:0:0
 
 noinst_HEADERS = nss_mysql.h lookup.h
 CPPFLAGS = @CPPFLAGS@ -Wall -D_REENTRANT
-EXTRA_DIST = INTERNALS TODO FAQ THANKS sample/*.cfg sample/*.sql
+EXTRA_DIST = INTERNALS TODO FAQ THANKS UPGRADING sample/*.cfg sample/*.sql
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = config.h
