--- a/configure.in
+++ b/configure.in
@@ -24,7 +24,7 @@ AC_INIT
 AC_CONFIG_SRCDIR([nss_main.c])
 AC_CANONICAL_TARGET([])
 AC_PREFIX_DEFAULT()
-AM_INIT_AUTOMAKE(libnss_mysql, 0.4dev)
+AM_INIT_AUTOMAKE(libnss_mysql, 0.4)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
