--- a/Makefile.in
+++ b/Makefile.in
@@ -80,7 +80,7 @@ VERSION = @VERSION@
 
 lib_LTLIBRARIES = libnss_mysql.la
 
-libnss_mysql_la_SOURCES = nss_config.c nss_main.c nss_structures.c \
+libnss_mysql_la_SOURCES = nss_config.c nss_main.c \
                           nss_support.c memory.c mysql.c lookup.c \
                           mysql-pwd.c mysql-spwd.c mysql-grp.c
 
@@ -100,9 +100,8 @@ DEFS = @DEFS@ -I. -I$(srcdir) -I.
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 libnss_mysql_la_LIBADD = 
-libnss_mysql_la_OBJECTS =  nss_config.lo nss_main.lo nss_structures.lo \
-nss_support.lo memory.lo mysql.lo lookup.lo mysql-pwd.lo mysql-spwd.lo \
-mysql-grp.lo
+libnss_mysql_la_OBJECTS =  nss_config.lo nss_main.lo nss_support.lo \
+memory.lo mysql.lo lookup.lo mysql-pwd.lo mysql-spwd.lo mysql-grp.lo
 CFLAGS = @CFLAGS@
 COMPILE = $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 LTCOMPILE = $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
@@ -122,7 +121,7 @@ TAR = gtar
 GZIP_ENV = --best
 DEP_FILES =  .deps/lookup.P .deps/memory.P .deps/mysql-grp.P \
 .deps/mysql-pwd.P .deps/mysql-spwd.P .deps/mysql.P .deps/nss_config.P \
-.deps/nss_main.P .deps/nss_structures.P .deps/nss_support.P
+.deps/nss_main.P .deps/nss_support.P
 SOURCES = $(libnss_mysql_la_SOURCES)
 OBJECTS = $(libnss_mysql_la_OBJECTS)
 
