--- a/config.h.in
+++ b/config.h.in
@@ -9,6 +9,9 @@
 /* Define to 1 if you have the `mysqlclient' library (-lmysqlclient). */
 #undef HAVE_LIBMYSQLCLIENT
 
+/* Define to 1 if you have the `mysqlclient_r' library (-lmysqlclient_r). */
+#undef HAVE_LIBMYSQLCLIENT_R
+
 /* Define to 1 if you have the `socket' library (-lsocket). */
 #undef HAVE_LIBSOCKET
 
