--- a/sample/nss_mysql.cfg
+++ b/sample/nss_mysql.cfg
@@ -10,9 +10,11 @@ getpwuid    SELECT username,'x',uid,gid,gecos,homedir,shell FROM users WHERE uid
 getspnam    SELECT username,password,lstchg,min,max,warn,inact,expire,flag FROM users WHERE username='%s' LIMIT 1
 getpwent    SELECT username,'x',uid,gid,gecos,homedir,shell FROM users
 getspent    SELECT username,password,lstchg,min,max,warn,inact,expire,flag FROM users
-getgrnam    SELECT name,password,gid,members FROM groups WHERE name='%s' LIMIT 1
-getgrgid    SELECT name,password,gid,members FROM groups WHERE gid='%u' LIMIT 1
-getgrent    SELECT name,password,gid,members FROM groups
+getgrnam    SELECT name,password,gid FROM groups WHERE name='%s' LIMIT 1
+getgrgid    SELECT name,password,gid FROM groups WHERE gid='%u' LIMIT 1
+getgrent    SELECT name,password,gid FROM groups
+memsbygid   SELECT username FROM grouplist WHERE gid='%u'
+gidsbymem   SELECT gid FROM grouplist where username='%s'
 
 [primary]
 host        localhost
