--- a/configure.in
+++ b/configure.in
@@ -24,7 +24,7 @@ AC_INIT
 AC_CONFIG_SRCDIR([nss_main.c])
 AC_CANONICAL_TARGET([])
 AC_PREFIX_DEFAULT()
-AM_INIT_AUTOMAKE(libnss_mysql, 0.5dev)
+AM_INIT_AUTOMAKE(libnss_mysql, 0.5)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
@@ -83,6 +83,10 @@ AC_TYPE_SIZE_T
 AC_CHECK_TYPES([socklen_t], , , [
 #include <unistd.h>
 #include <sys/socket.h>
+])
+
+AC_CHECK_TYPES([my_ulonglong], , , [
+#include <mysql.h>
 ])
 
 AC_CHECK_FUNCS(strcspn strspn, ,
