--- a/configure.in
+++ b/configure.in
@@ -73,6 +73,8 @@ AC_CHECK_LIB(mysqlclient_r, mysql_connect, ,
              [AC_CHECK_LIB(mysqlclient, mysql_connect, ,
                            [AC_MSG_ERROR([Unable find a functioning MySQL library])])])
 
+AC_CHECK_LIB(dl, dlsym)
+
 AC_HEADER_STDC
 AC_CHECK_HEADER(mysql.h, , [AC_MSG_ERROR([Unable to find mysql.h])])
 AC_CHECK_HEADERS(syslog.h stdint.h nss.h nss_common.h strings.h)
