--- a/Makefile.in
+++ b/Makefile.in
@@ -431,9 +431,13 @@ info: info-am
 
 info-am:
 
-install-data-am: install-data-local
+install-data-am:
+	@$(NORMAL_INSTALL)
+	$(MAKE) $(AM_MAKEFLAGS) install-data-hook
 
-install-exec-am: install-exec-local install-libLTLIBRARIES
+install-exec-am: install-libLTLIBRARIES
+	@$(NORMAL_INSTALL)
+	$(MAKE) $(AM_MAKEFLAGS) install-exec-hook
 
 install-info: install-info-am
 
@@ -458,9 +462,8 @@ uninstall-am: uninstall-info-am uninstall-libLTLIBRARIES
 	distcheck distclean distclean-compile distclean-depend \
 	distclean-generic distclean-hdr distclean-libtool \
 	distclean-tags distcleancheck distdir dvi dvi-am info info-am \
-	install install-am install-data install-data-am \
-	install-data-local install-exec install-exec-am \
-	install-exec-local install-info install-info-am \
+	install install-am install-data install-data-am install-exec \
+	install-exec-am install-info install-info-am \
 	install-libLTLIBRARIES install-man install-strip installcheck \
 	installcheck-am installdirs maintainer-clean \
 	maintainer-clean-generic mostlyclean mostlyclean-compile \
@@ -468,14 +471,14 @@ uninstall-am: uninstall-info-am uninstall-libLTLIBRARIES
 	uninstall-am uninstall-info-am uninstall-libLTLIBRARIES
 
 
-install-exec-local:
+install-exec-hook:
 	-rm -f $(DESTDIR)$(libdir)/libnss_mysql.la
 @SOLARIS_TRUE@	-rm -f $(DESTDIR)$(libdir)/libnss_mysql.so
 @SOLARIS_TRUE@	-rm -f $(DESTDIR)$(libdir)/libnss_mysql.so.@LIBVER@
 @SOLARIS_TRUE@	-mv -f $(DESTDIR)$(libdir)/libnss_mysql.so.@LIBVER@.0.0 \
 @SOLARIS_TRUE@           $(DESTDIR)$(libdir)/nss_mysql.so.1
 
-install-data-local:
+install-data-hook:
 	@if test ! -f ${DESTDIR}${sysconfdir}/nss_mysql.cfg; then \
 		${srcdir}/mkinstalldirs ${DESTDIR}${sysconfdir}; \
 		${INSTALL_DATA} ${srcdir}/sample/nss_mysql.cfg \
