--- a/configure.in
+++ b/configure.in
@@ -21,6 +21,7 @@ dnl Autoconf 2.53 is REQUIRED
 
 AC_REVISION($Revision$)dnl
 AC_INIT
+AC_PREREQ(2.53)
 AC_CONFIG_SRCDIR([nss_main.c])
 AC_CANONICAL_TARGET([])
 AC_PREFIX_DEFAULT()
