--- a/configure.in
+++ b/configure.in
@@ -25,7 +25,7 @@ AC_PREREQ(2.53)
 AC_CONFIG_SRCDIR([nss_main.c])
 AC_CANONICAL_TARGET([])
 AC_PREFIX_DEFAULT()
-AM_INIT_AUTOMAKE(libnss_mysql, 0.7dev)
+AM_INIT_AUTOMAKE(libnss_mysql, 0.7a)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
