--- a/Makefile.am
+++ b/Makefile.am
@@ -22,7 +22,7 @@ AUTOMAKE_OPTIONS = foreign 1.6
 
 lib_LTLIBRARIES = libnss_mysql.la
 
-libnss_mysql_la_SOURCES = nss_config.c nss_main.c \
+libnss_mysql_la_SOURCES = version.c nss_config.c nss_main.c \
                           nss_support.c memory.c mysql.c lookup.c \
                           mysql-pwd.c mysql-spwd.c mysql-grp.c
 libnss_mysql_la_LDFLAGS = -module -version-info @LIBVER@:0:0
