Commented out [secondary] server to prevent hangs on new installations

--- a/sample/nss_mysql.cfg
+++ b/sample/nss_mysql.cfg
@@ -20,10 +20,9 @@ username    nss-user
 password    userpass
 socket      /var/lib/mysql/mysql.sock
 
-[secondary]
-host        192.168.1.2
-database    auth
-username    nss-user
-password    userpass
-port        3306
-
+#[secondary]
+#host        192.168.1.2
+#database    auth
+#username    nss-user
+#password    userpass
+#port        3306
