--- a/sample/nss_mysql_root.cfg
+++ b/sample/nss_mysql_root.cfg
@@ -2,6 +2,6 @@
 username    nss-root
 password    rootpass
 
-[secondary]
-username    nss-root
-password    rootpass
+#[secondary]
+#username    nss-root
+#password    rootpass
