Added new options

--- a/sample/nss_mysql.cfg
+++ b/sample/nss_mysql.cfg
@@ -19,6 +19,11 @@ database    auth
 username    nss-user
 password    userpass
 socket      /var/lib/mysql/mysql.sock
+ssl         0
+timeout     3
+compress    0
+#initcmd     sql-statement-here
+
 
 #[secondary]
 #host        192.168.1.2
@@ -26,3 +31,7 @@ socket      /var/lib/mysql/mysql.sock
 #username    nss-user
 #password    userpass
 #port        3306
+#ssl         0
+#timeout     3
+#compress    0
+##initcmd     sql-statement-here
