Comment out socket/port as they're optional now

--- a/sample/nss_mysql.cfg
+++ b/sample/nss_mysql.cfg
@@ -18,7 +18,7 @@ host        localhost
 database    auth
 username    nss-user
 password    userpass
-socket      /var/lib/mysql/mysql.sock
+#socket      /var/lib/mysql/mysql.sock
 ssl         0
 timeout     3
 compress    0
@@ -30,7 +30,7 @@ compress    0
 #database    auth
 #username    nss-user
 #password    userpass
-#port        3306
+##port        3306
 #ssl         0
 #timeout     3
 #compress    0
